# fast-drive

./: .gitignore  README.md  main.py  pyproject.toml
src/fast_drive/: __init__.py  applications.py
src/fast_drive/api/v1/: v1_router.py
src/fast_drive/api/v1/auth/: api.py
src/fast_drive/api/v1/file/: api.py
src/fast_drive/api/v1/test/: api.py
src/fast_drive/core/: _asyncio.py  auth.py  config.py  disk.py  security.py  user.py
src/fast_drive/model/: fake_model.py
src/fast_drive/schema/: auth.py  file.py
src/fast_drive/v1/auth/: api.py
tests/api/: utils.py
tests/api/auth/: test_auth.py  test_user.py
tests/api/test/: test_string_io.py
