[project]
name = "fast-drive"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "a129924", email = "a129924@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.112.2",
    "pydantic-settings>=2.4.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
]
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]